--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -66,6 +66,7 @@ jobs:
           JSON_JSONLINT_FILTER_REGEX_EXCLUDE: .vscode
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
           # DISABLE: COPYPASTE,SPELL # Uncomment to disable copy-paste and spell checks
+          YAML_YAMLLINT_CONFIG_FILE: .github/.yamllint.yml
           # recently yamllint started to complain a lot for github actions
           YAML_YAMLLINT_DISABLE_ERRORS: true
 
