--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -69,6 +69,7 @@ jobs:
           YAML_YAMLLINT_DISABLE_ERRORS: true # recently yamllint started to complain a lot for github actions
           REPOSITORY_DEVSKIM_DISABLE_ERRORS: true # fails for strncpy()
           REPOSITORY_CHECKOV_DISABLE_ERRORS: true # fails for missing USER in containers
+          REPOSITORY_TRIVY_DISABLE_ERRORS: true # fails for missing USER in devcontainer
 
       # Upload MegaLinter artifacts
       - name: Archive production artifacts
